--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,31 +7,13 @@
 </head>
 <nav>
     <div class="nav-wrapper">
-      <a href="/users/profile" class="brand-logo left">My Profile</a>
-      <ul class="right">
-        <div class="navbar-fixed">
-            <nav>
-              <div class="nav-wrapper">
-               
-                <ul class="right">
-                  <li>
-                  <% if (user) { %>
-                    <a href="/auth/logout">Log Out</a>
-                  <% } else { %>
-                    <a href="/auth/google">Login with Google</a>
-                  <% } %>
-                  </li>
-                  <li>
-                      <a href="/users/goals">Goals</a>
-                  </li>
-                  <li>
-                      <a href="/users/questions" >Ask A Question</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-      </ul>
+      <a href="/users/goals" class="brand-logo left">My Goals</a>
+      <a href="/users/questions" >Ask A Question</a>
+      <% if (user) { %>
+        <a href="/auth/logout">Log Out</a>
+      <% } else { %>
+        <a href="/auth/google">Login with Google</a>
+      <% } %>
     </div>
   </nav>
 
