--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<script defer src="/javascripts/script.js"></script>
 <body>
   <div class="navbar-fixed">
     
@@ -10,6 +11,18 @@
       .split(',')[0] %>
     <% }) %>
   </ul>
-</body>
+<br><br><br><br>
 
+  <h2>Are you in tune? </h2>
+  <p>It sounds like you're playing...</p>
+  <h1 id="note-name"></h1>
+  <p>
+      <span>frequency (Hz):</span>
+      <span id="frequency"></span>
+  </p>
+  <hr>
+  <button id="play-note">Click for an 'E'</button>
+  <hr>
+</body>
 </html>
+
