--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,1 +1,7 @@
-<h1> Yo YO </h1>
+<nav>
+    <div class="nav-wrapper">
+      <a href="/users/goals" class="brand-logo left">My Goals</a>
+      <a href="/users/questions" >Ask A Question</a>
+    </div>
+  </nav>
+
