add text input form

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,3 +5,14 @@
     </div>
   </nav>
 
+  <body>
+      <h2 class="table">Set a New Goal!</h2>
+      <form class="table" action="/users" method="POST">
+    <label> Goal
+        <select name="goal">
+            <input type="text">
+        </select>
+    </label>
+    </form>
+  </body>
+
