add start and due date

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -9,9 +9,13 @@
       <h2 class="table">Set a New Goal!</h2>
       <form class="table" action="/users" method="POST">
     <label> Goal
-        <select name="goal">
-            <input type="text">
-        </select>
+            <input type="text"><br>
+    </label><br>
+    <label> Start Date
+        <input type="date">
+    </label>
+    <label> Due Date
+        <input type="date">
     </label>
     </form>
   </body>
