add dates/challenges forms

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -11,9 +11,13 @@
     <label> Goal
             <input type="text"><br>
     </label><br>
+    <label>Challenges
+        <input type="text">
+        <br><br>
+    </label>
     <label> Start Date
         <input type="date">
-    </label>
+    </label><br> <br>
     <label> Due Date
         <input type="date">
     </label>
