--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -21,6 +21,8 @@
     <label> Due Date
         <input type="date">
     </label>
+    <br><br>
+    <button><a type="button" class="btn btn-info" href="/users/goals">Submit</a></button>
     </form>
   </body>
 
