add create goals controller

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,7 +8,7 @@
 
   <body>
       <h2 class="table">Set a New Goal!</h2>
-      <form class="table" action="/users/goals" method="POST">
+      <form class="table" action="/goals" method="POST">
     <label> Goal
             <input type="text"><br>
     </label><br>
