--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 <nav>
     <div class="nav-wrapper">
       <a href="/users/goals">My Goals</a>
-      <a href="/questions/index" >Ask A Question</a>
+      <a href="/users/questions" >Ask A Question</a>
       <a href="/">Tuner</a>
       <% if (user) { %>
         <a href="/auth/logout">Log Out</a>
