--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-wrapper">
       <a href="/users/goals" class="brand-logo left">My Goals</a>
-      <a href="/questions/index" >Ask A Question</a>
+      <a href="/users/questions" >Ask A Question</a>
       <a href="/">Tuner</a>
     </div>
   </nav>
