--- a/views/users/questions.ejs
+++ b/views/users/questions.ejs
@@ -4,7 +4,7 @@
 <h3>Ask a Question</h3>
 <form action="/users/questions" method="POST">
   <div class="form-group">
-    <input type="text" class="form-control" aria-describedby="message" name="question" placeholder="Enter question...">
+    <input required type="text" class="form-control" aria-describedby="message" name="question" placeholder="Enter question...">
   </div>
   <button type="submit" class="btn btn-success">Create Post</button>
 </form>
