--- a/views/users/questions.ejs
+++ b/views/users/questions.ejs
@@ -22,6 +22,8 @@
             <td><form action="/questions/<%= q.id %>" method="POST"></form></td>
             <td><%= q.askedBy %></td>
             <td><%= q.question %> </td>
+            <td><form action="/users/questions/<%= q.id %>?_method=DELETE" method="POST">
+            <button type="submit">Delete</button></form></td>
         </tr>
     
      <% }) }%>
