--- a/views/users/goals.ejs
+++ b/views/users/goals.ejs
@@ -1,7 +1,11 @@
 <%- include('../partials/header') %>
-
-
-<h1>Goals List</h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/style.css" />
+  </head>
+  
+<div>
+<h1 class="table">Goals List</h1>
 <a type="button" class="btn btn-info" href="/users/new">Set a Goal</a>
 <table class ="table">
     <thead>
@@ -31,3 +35,4 @@
     <% })%>
     </tbody>
 </table>
+</div>
