--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,4 +1,21 @@
-<%- include('../partials/header') %>
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheets/style.css" />
+</head>
+
+<nav>
+  <div class="nav-wrapper">
+    <a href="/users/goals">My Goals</a>
+    <a href="/users/questions" >Ask A Question</a>
+    <a href="/">Tuner</a>
+    <% if (user) { %>
+      <a href="/auth/logout">Log Out</a>
+    <% } else { %>
+      <a href="/auth/google">Login with Google</a>
+    <% } %>
+  </div>
+</nav>
+
 <script defer src="/javascripts/script.js"></script>
 <body>
   <div class="navbar-fixed">
