--- a/views/users/questions.ejs
+++ b/views/users/questions.ejs
@@ -1,31 +1,45 @@
-
-
-
-<h3>Ask a Question</h3>
-<form action="/users/questions" method="POST">
-  <div class="form-group">
-    <input required type="text" class="form-control" aria-describedby="message" name="question" placeholder="Enter question...">
-  </div>
-  <button type="submit" class="btn btn-success">Create Post</button>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Asked By</th>
-            <th>Question</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% if(question !== null) { %> 
-        <% question.forEach((q) => { %> 
-        <tr>
-            <td><form action="/questions/<%= q.id %>" method="POST"></form></td>
-            <td><%= q.askedBy %></td>
-            <td><%= q.question %> </td>
-            <td><form action="/users/questions/<%= q.id %>?_method=DELETE" method="POST">
-            <button type="submit">Delete</button></form></td>
-        </tr>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/style.css" />
+  </head>
+  
+    <nav>
+        <div class="nav-wrapper">
+          <a href="/users/goals" class="brand-logo left">My Goals</a>
+          <a href="/users/questions" >Ask A Question</a>
+          <a href="/">Tuner</a>
+        </div>
+      </nav>
+</head>
+<body>
     
-     <% }) }%>
-    </tbody>
-</table>
+    <h3 id="center">Ask a Question</h3>
+    <form action="/users/questions" method="POST">
+      <div class="form-group">
+        <input required type="text" class="form-control" aria-describedby="message" name="question" placeholder="Enter question...">
+      </div>
+      <button type="submit" class="btn btn-primary" id="center">Create Post</button>
+    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Asked By</th>
+                <th scope="col">Question</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% if(question !== null) { %> 
+            <% question.forEach((q) => { %> 
+            <tr>
+                <td><form action="/questions/<%= q.id %>" method="POST"></form></td>
+                <td><%= q.askedBy %></td>
+                <td><%= q.question %> </td>
+                <td><form action="/users/questions/<%= q.id %>?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-primary">Delete</button></form></td>
+            </tr>
+        
+         <% }) }%>
+        </tbody>
+    </table>
+    
+</body>
